syntax = "proto3";

package protobuf;

import "enums.proto";

message EmojiReaction {
  uint64 clock = 1;
  string chat_id = 2;
  string message_id = 3;
  MessageType message_type = 4;
  Type type = 5;

  enum Type {
    UNKNOWN_EMOJI_REACTION_TYPE = 0;
    LOVE = 1;
    THUMBS_UP = 2;
    THUMBS_DOWN = 3;
    LAUGH = 4;
    SAD = 5;
    ANGRY = 6;
  }
}

message EmojiReactionRetraction {
  uint64 clock = 1;
  string emoji_reaction_id = 2;
}
